# App-logger

./: .gitignore
backend/: Dockerfile  config.py  main.py  pyproject.toml  r  requirements.txt  test_ui.py
backend/data/: request_history.csv
backend/models/: schemas.py
backend/scripts/: api_call.py  app.py  logs_cleaning.py
backend/services/: pipeline.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/pages/: ApiDetails.jsx  ErrorLogs.jsx
frontend/src/services/: api.js
